# freecut

./: .coderabbit.yaml  .codex-vitest-preview.json  .dockerignore  .editorconfig  .env.example  .fallowrc.json  .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  COLOR-GRADING-TODO.md  LICENSE  README.md  components.json  eslint.config.js  fallow-audit.tmp.json  foundry.toml  hardhat.config.ts  headless.html  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
.claude/: launch.json  settings.local.json
.github/: FUNDING.yml
.husky/: pre-push
.vite-hooks/: pre-push
api/: onramp-url.ts
contracts/: Cargo.toml  foundry.toml
contracts/stylus/: Cargo.toml  README.md
contracts/stylus/src/: lib.rs  main.rs
crates/frame-buffer/: Cargo.toml
crates/frame-buffer/src/: lib.rs
docs/: README.zh-CN.md  architecture-boundaries.md  core-first-architecture.md  render-frame-decomposition-plan.md  timeline-cursor-icons.html
headless/: Dockerfile  README.md  edit.mjs  media-server.mjs  media-smoke.mjs  probe.mjs  render.mjs  serve.mjs  server.mjs  smoke.mjs  test.mjs
scripts/: changelog-append.mjs  changelog-rollup.mjs  check-bundle-budgets.mjs  check-deps-contract-boundaries.mjs  check-deps-wrapper-health.mjs  check-fallow-changed-health.mjs  check-feature-boundaries.mjs  check-feature-edge-budgets.mjs  check-legacy-lib-imports.mjs  deploy-payment.mjs  deploy-payment.ts  feature-boundary-context.mjs  feature-import-utils.mjs  fix-mojibake.py  payment-constructor-args.ts  preview-sync-stress.mjs  (+3 more)
(+2287 files in other folders)
